fix: use npm install instead of npm ci in workflow
- Project has package-lock=false in .npmrc (intentional design choice)
- npm ci requires package-lock.json which is disabled
- npm install works without package-lock.json and respects .npmrc config
- Maintains dependency caching for performance

This should resolve all CI pipeline dependency installation issues

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm install --prefer-offline --no-audit
 
       - name: Lint
         run: npm run lint
@@ -102,7 +102,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-deps-release.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm install --prefer-offline --no-audit
 
       - name: Build all packages
         run: npm run build
