--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "Dev Atlas - Monorepo with MCP Knowledge Graph and VS Code Extension",
   "workspaces": [
-    "apps/*",
+    "apps/mcp-knowledge-graph",
+    "apps/vscode-extension",
     "packages/*"
   ],
   "scripts": {
