refactor: update website configuration and components
- Simplified workspace configuration in package.json to include all apps.
- Added new MDX components for better content management.
- Updated Next.js version in website package.json for improved features.
- Refactored layout and not-found components for better styling and structure.
- Removed deprecated theme configuration file and error handling component.
- Enhanced metadata structure in various files for consistency.

These changes aim to streamline the website's architecture and improve maintainability.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "description": "Dev Atlas - Monorepo with MCP Knowledge Graph and VS Code Extension",
   "workspaces": [
-    "apps/mcp-knowledge-graph",
-    "apps/vscode-extension",
+    "apps/*",
     "packages/*"
   ],
   "scripts": {
