--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -25,10 +25,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
-    "next": "^15.5.2",
+    "next": "14.2.18",
     "next-themes": "^0.4.6",
     "nextra": "^4.0.0",
-    "nextra-theme-docs": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.3.1",
